alteraçao nas imagens

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     <p>Especialista em entregas rápidas e atendimento gentil.</p>
                 </li>
                 <li class="deliverer-item">
-                    <img src="entregador2.jpg" alt="Foto do entregador Maria" />
+                    <img src="https://cdn.pixabay.com/photo/2020/04/09/19/59/man-5022931_1280.jpg" alt="Foto do entregador Maria" />
                     <h4>Maria Oliveira</h4>
                     <p>Conhecida pela pontualidade e cuidado extremo com os produtos.</p>
                 </li>
