Alteraçao final , img e revisao de palavras

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <!-- Banner -->
     <section class="banner" >
         <div class="container banner-container">
-            <h1 data-animate>Entrega rápida e segura <br> direto para você</h1>
+            <h1 data-animate>Tutano Log Entrega rápida e segura <br> direto para você</h1>
             <p data-animate>Conte com a Tutano Log para levar seus produtos com agilidade e cuidado.</p>
             <a data-animate href="#pedido" class="btn btn-primary btn-banner1">Peça agora</a>
         </div>
@@ -133,24 +133,14 @@
             <h2>Nossa equipe de entregadores</h2>
             <ul class="deliverers-list">
                 <li class="deliverer-item">
-                    <img src="entregador1.jpg" alt="Foto do entregador João" />
-                    <h4>João Silva</h4>
+                    <img src="./img/teste2.jpg" alt="Foto do entregador João" />
+                    <h4>Jeferon Costa</h4>
                     <p>Especialista em entregas rápidas e atendimento gentil.</p>
                 </li>
                 <li class="deliverer-item">
-                    <img src="https://cdn.pixabay.com/photo/2020/04/09/19/59/man-5022931_1280.jpg" alt="Foto do entregador Maria" />
-                    <h4>Maria Oliveira</h4>
-                    <p>Conhecida pela pontualidade e cuidado extremo com os produtos.</p>
-                </li>
-                <li class="deliverer-item">
-                    <img src="entregador3.jpg" alt="Foto do entregador Carlos" />
-                    <h4>Carlos Pereira</h4>
-                    <p>Motorista experiente com anos de atuação na cidade.</p>
-                </li>
-                <li class="deliverer-item">
-                    <img src="https://img.freepik.com/fotos-gratis/jovem-barbudo-com-camisa-listrada_273609-5677.jpg?semt=ais_hybrid&w=740" alt="Foto do entregador Ana" />
-                    <h4>Ana Souza</h4>
-                    <p>Atendimento personalizado e sorriso sempre no rosto.</p>
+                    <img src="./img/Imagem do WhatsApp de 2025-07-09 à(s) 18.58.43_6d4cfb3c.jpg" alt="Foto do entregador Maria" />
+                    <h4>Lucas</h4>
+                    <p>Rapido e especialista em entregas e atendimento super otimo</p>
                 </li>
             </ul>
         </div>
@@ -183,7 +173,7 @@
             <h2>Perguntas frequentes</h2>
             <dl>
                 <dt>Qual o prazo médio de entrega?</dt>
-                <dd>Normalmente entre 2 a 4 horas, dependendo da região.</dd>
+                <dd>Normalmente entre 30 minutos a 1 hora, dependendo da região.</dd>
 
                 <dt>Posso acompanhar meu pedido?</dt>
                 <dd>Sim! Você pode rastrear o pedido em tempo real pelo nosso site.</dd>
@@ -192,7 +182,7 @@
                 <dd>Nosso suporte está disponível 24 horas por dia, 7 dias por semana.</dd>
 
                 <dt>Quais formas de pagamento aceitam?</dt>
-                <dd>Aceitamos cartão de crédito, débito, PIX e dinheiro na entrega.</dd>
+                <dd>PIX e dinheiro na entrega.</dd>
             </dl>
         </div>
     </section>
@@ -263,11 +253,10 @@
             <h2>Contato</h2>
             <p>Fale com a gente pelo WhatsApp, email ou redes sociais:</p>
             <ul class="contact-list">
-                <li>WhatsApp: <a href="https://wa.me/551194195-1299" target="_blank" rel="noopener">+55 11 94904-1403</a>
+                <li>WhatsApp: <a href="https://wa.me/5511941951299" target="_blank" rel="noopener">+55 11 94904-1403</a>
                 </li>
                 <li>Email: <a href="mailto:tutanolog@gmail.com">tutanolog@gmail.com</a></li>
-                <li>Instagram: <a href="https://instagram.com/tutanolog" target="_blank" rel="noopener">@tutanolog</a>
-                </li>
+                
             </ul>
         </div>
     </section>
