Descreva aqui o que você alterou

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             <h2>Perguntas frequentes</h2>
             <dl>
                 <dt>Qual o prazo médio de entrega?</dt>
-                <dd>Normalmente entre 30 minutos a 1 hora, dependendo da região.</dd>
+                <dd>Normalmente entre 1 a 4 horas, dependendo da região.</dd>
 
                 <dt>Posso acompanhar meu pedido?</dt>
                 <dd>Sim! Você pode rastrear o pedido em tempo real pelo nosso site.</dd>
@@ -182,7 +182,7 @@
                 <dd>Nosso suporte está disponível 24 horas por dia, 7 dias por semana.</dd>
 
                 <dt>Quais formas de pagamento aceitam?</dt>
-                <dd>PIX e dinheiro na entrega.</dd>
+                <dd>Cartoes de debito, credito PIX e dinheiro na entrega.</dd>
             </dl>
         </div>
     </section>
