Descreva aqui o que você alterou

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
             <h2>Contato</h2>
             <p>Fale com a gente pelo WhatsApp, email ou redes sociais:</p>
             <ul class="contact-list">
-                <li>WhatsApp: <a href="https://wa.me/5511941951299" target="_blank" rel="noopener">+55 11 94904-1403</a>
+                <li>WhatsApp: <a href="https://wa.me/5511941951299" target="_blank" rel="noopener">+55 11 941951299</a>
                 </li>
                 <li>Email: <a href="mailto:tutanolog@gmail.com">tutanolog@gmail.com</a></li>
                 
