Alteraçao na img do heasder poruma logo nova e a tiraçao das palavras no header pelo hamburger

--- a/index.html
+++ b/index.html
@@ -19,30 +19,20 @@
     <header class="header">
         <div class="container header-container">
             <div class="logo">
-                <img src="./img/logo.jpg" alt="Logo Tutano Log" />
+                <img src="./img/logo-2.png" alt="Logo Tutano Log" />
             </div>
 
             <!-- Botão hamburger -->
+            
+
+            <div class="haha">
+                <button class="btn btn-primary btn-header">Faça seu pedido</button>
             <button class="hamburger" aria-label="Abrir menu">
                 <span></span>
                 <span></span>
                 <span></span>
             </button>
-
-            <nav class="nav">
-                <ul>
-                    <li><a href="#sobre">Sobre</a></li>
-                    <li><a href="#servicos">Serviços</a></li>
-                    <li><a href="#entregadores">Entregadores</a></li>
-                    <li><a href="#clientes">Clientes</a></li>
-                    <li><a href="#valores">Valores</a></li>
-                    <li><a href="#depoimentos">Depoimentos</a></li>
-                    <li><a href="#faq">FAQ</a></li>
-                    <li><a href="#contato">Contato</a></li>
-                </ul>
-            </nav>
-
-            <button class="btn btn-primary btn-header">Faça seu pedido</button>
+            </div>
         </div>
     </header>
 
@@ -133,13 +123,13 @@
             <h2>Nossa equipe de entregadores</h2>
             <ul class="deliverers-list">
                 <li class="deliverer-item">
-                    <img src="./img/teste2.jpg" alt="Foto do entregador João" />
+                    <img src="./img/teste2.jpg" alt="Foto do entregador Jeferson" />
                     <h4>Jeferon Costa</h4>
                     <p>Especialista em entregas rápidas e atendimento gentil.</p>
                 </li>
                 <li class="deliverer-item">
                     <img src="./img/Imagem do WhatsApp de 2025-07-09 à(s) 18.58.43_6d4cfb3c.jpg"
-                        alt="Foto do entregador Maria" />
+                        alt="Foto do entregador Lucas" />
                     <h4>Lucas</h4>
                     <p>Rapido e especialista em entregas e atendimento super otimo</p>
                 </li>
