alteraçao no html dos buttons

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
         <div class="container" style="text-align: center;">
             <h2>Pronto para fazer seu pedido?</h2>
             <p>Entre em contato conosco agora mesmo pelo WhatsApp.</p>
-            <a href="https://wa.me/551194195-1299" class="btn btn-banner">Falar com a Tutano Log</a>
+            <a href="https://wa.me/5511941951299" class="btn btn-banner">Falar com a Tutano Log</a>
         </div>
     </section>
     <section id="contato" class="section section-contact" data-animate>
