Corrige bug no formulário de contato

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Tutano Log - Serviço de Entregas</title>
+    <title>TUTANOLOG - Serviço de Entregas</title>
     <link rel="stylesheet" href="style.css" />
     <style>
         html {
@@ -55,7 +55,7 @@
     <section class="banner">
         <div class="container banner-container">
             <h1 data-animate>TUTANOLOG - Entrega rápida e segura direto para você</h1>
-            <p data-animate>Conte com a Tutano Log para levar suas encomendas com agilidade e cuidado.</p>
+            <p data-animate>Conte com a TUTANOLOG para levar suas encomendas com agilidade e cuidado.</p>
             <a data-animate href="#pedido" class="btn btn-primary btn-banner1">Solicitar agora</a>
         </div>
     </section>
@@ -156,7 +156,7 @@
             <h2>O que nossos clientes dizem</h2>
             <div class="testimonials-grid">
                 <blockquote class="testimonial">
-                    <p>"A Tutano Log é confiável, sempre entregando rápido. Recomendo muito!"</p>
+                    <p>"A TUTANOLOG é confiável, sempre entregando rápido. Recomendo muito!"</p>
                     <footer>- Lucas Mendes</footer>
                 </blockquote>
                 <blockquote class="testimonial">
@@ -245,7 +245,7 @@
             <h2>Pronto para agendar sua retirada?</h2>
             <p>Entre em contato conosco agora mesmo pelo WhatsApp.</p>
             <a href="https://wa.me/5511941951299" class="btn btn-banner" target="_blank" rel="noopener">Falar com a
-                Tutano Log</a>
+                TUTANOLOG</a>
         </div>
     </section>
 
