alteraçoes nas fotos dos entregadores e mudanças no formulario

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <h2>Nossa equipe de entregadores</h2>
             <ul class="deliverers-list">
                 <li class="deliverer-item">
-                    <img src="./img/teste2.jpg" alt="Foto do entregador Jeferson" />
+                    <img src="./img/jeferson.jpg" alt="Foto do entregador Jeferson" />
                     <h4>Jeferson Oliveira</h4>
                     <p>Com anos de experiência na área logística aeroportuária, com conhecimentos de todos os tipos de  modais para embarque de cargas.</p>
                 </li>
@@ -189,7 +189,7 @@
     <!-- Pedido -->
     <section id="pedido" class="section section-order">
         <div class="container" data-animate>
-            <h2>Solicite uma retirada</h2>
+            <h2>Solicite o serviço desejado</h2>
             <form id="pedido-button" action="#" method="post" class="order-form" novalidate>
                 <input type="hidden" id="servico_escolhido" name="servico_escolhido" value="">
 
@@ -244,8 +244,7 @@
         <div class="container" style="text-align: center;">
             <h2>Pronto para agendar sua retirada?</h2>
             <p>Entre em contato conosco agora mesmo pelo WhatsApp.</p>
-            <a href="https://wa.me/5511941951299" class="btn btn-banner" target="_blank" rel="noopener">Falar com a
-                TUTANOLOG</a>
+            <a href="https://wa.me/5511941951299" class="btn btn-banner" target="_blank" rel="noopener">Fale com os nossos representantes.</a>
         </div>
     </section>
 
