Corrige emojis no WhatsApp e atualiza app.js

--- a/index.html
+++ b/index.html
@@ -208,6 +208,10 @@
                     <label for="telefone">Telefone</label>
                     <input type="tel" id="telefone" name="telefone" placeholder="(99) 99999-9999" required
                         pattern="\(\d{2}\) \d{5}-\d{4}" inputmode="numeric" />
+
+                        <label for="email">Endereço</label>
+                    <input type="endereco" id="endereco" name="endereco" placeholder="Rua das flores, 66" required />
+                    
                 </fieldset>
 
                 <fieldset>
